gccida/c3/simplify_shift_const
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_shift_const/src/combine.c:9380:35: error: must use 'enum' tag to refer to type 'rtx_code'
rtx  simplify_shift_const( rtx x, rtx_code code, machine_mode result_mode, rtx varop, int orig_count) 
                                  ^
                                  enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_shift_const/src/combine.c:9380:50: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  simplify_shift_const( rtx x, rtx_code code, machine_mode result_mode, rtx varop, int orig_count) 
                                                 ^
                                                 enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_shift_const/src/combine.c:9383:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v6; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_shift_const/src/combine.c:9388:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_shift_const/src/combine.c:9393:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v18; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_shift_const/src/combine.c:9431:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v56; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_shift_const/src/combine.c:9436:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v61; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_shift_const/src/combine.c:9440:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v65; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_shift_const/src/combine.c:9444:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v69; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_shift_const/src/combine.c:9451:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v76; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_shift_const/src/combine.c:9455:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v80; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_shift_const/src/combine.c:9463:4: error: expected ';' after expression
rtx v88; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_shift_const/src/combine.c:9463:5: error: use of undeclared identifier 'v88'
rtx v88; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_shift_const/src/combine.c:9468:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v93; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_shift_const/src/combine.c:9469:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v94; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_shift_const/src/combine.c:9474:4: error: expected ';' after expression
rtx v99; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_shift_const/src/combine.c:9474:5: error: use of undeclared identifier 'v99'
rtx v99; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_shift_const/src/combine.c:9491:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v116; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_shift_const/src/combine.c:9492:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v117; // r12d 
^
enum 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_shift_const/src/obj/combine.o] Error 1
